<resources>
    <string name="app_name">ROOMS</string>
    <string name="outgoing_order_details">Outgoing Order Details</string>
    <string name="confirm">Confirm</string>
    <string name="edit">Edit</string>
    <string name="name_add">Name</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="add_price">Price</string>
    <string name="add_button">ADD</string>
    <string name="incoming_orders_activity">Incoming Orders</string>
    <string name="incoming_name">Name</string>
    <string name="destination_incoming">Destination</string>
    <string name="amount_incoming">Amount</string>
    <string name="existing_sales">Existing Sales</string>
    <string name="items_sales">Items</string>
    <string name="rooms_launch">ROOMS</string>
    <string name="registration_launch">Registration</string>
    <string name="sign_in_launch">SIGN IN</string>
    <string name="sign_in_login">SIGN IN</string>
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="sign_in_logs">SIGN IN</string>
    <string name="forgot_password_txt">Forgot Password?</string>
    <string name="rooms_splash">ROOMS</string>
    <string name="orders_orderactivity">Orders</string>
    <string name="incoming_orders_act">Incoming Orders</string>
    <string name="outgoing_orders_act1">Outgoing Orders</string>
    <string name="outgoing_orders_act">Outgoing Orders</string>
    <string name="category_outactivity">Category</string>
    <string name="name_outactivity">Name</string>
    <string name="amount_outactivity">Amount</string>
    <string name="destination_outactivity">Destination</string>
    <string name="order_outactivity">Order</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="business_name">Business Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="existing_items">Existing Items</string>
    <string name="items01">Items</string>
    <string name="add_items_addd">Add Items</string>
    <string name="item_name_add">Item name</string>
    <string name="price_add">Price</string>
    <string name="supplier_name_add">Supplier Name</string>
    <string name="add_item">Add</string>
    <string name="submit">submit_item</string>
    <string name="error_invalid_email">Invalid Email Address</string>
    <string name="error_invalid_password">Password is short</string>
    =======
>>>>>>> origin/master
</resources>