<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OutgoingActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#1c2e4a"
        android:text="@string/outgoing_orders_act"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_outactivity"
        android:textColor="@color/black"
        android:inputType="text"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:padding="7dp"
        android:id="@+id/Cat_Outgoing"
        android:autofillHints="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_outactivity"
        android:textColor="@color/black"
        android:inputType="text"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:padding="7dp"
        android:id="@+id/Outgoing_name"
        android:autofillHints="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount_outactivity"
        android:textColor="@color/black"
        android:inputType="number"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:padding="7dp"
        android:id="@+id/Amount_outgoing"
        android:autofillHints="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/destination_outactivity"
        android:textColor="@color/black"
        android:inputType="text"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:padding="7dp"
        android:id="@+id/Destination_outgoing"
        android:autofillHints="" />

    <Button
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:text="@string/order_outactivity"
        android:layout_marginLeft="120dp"
        android:layout_marginRight="110dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:id="@+id/incoming_btn"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="110dp" />

</LinearLayout>