<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IncomingActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#1c2e4a"
        android:text="@string/incoming_orders_activity"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/incoming_name"
        android:textColor="@color/black"
        android:inputType="text"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:padding="7dp"
        android:id="@+id/Outgoing_name"
        android:importantForAutofill="no"
        android:autofillHints="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/destination_incoming"
        android:textColor="@color/black"
        android:inputType="text"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:padding="7dp"
        android:id="@+id/Incoming_destination"
        android:autofillHints="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount_incoming"
        android:textColor="@color/black"
        android:inputType="text"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:padding="7dp"
        android:id="@+id/Incoming_amount"
        android:autofillHints="" />

</LinearLayout>