<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/outgoing_order_details"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:id="@+id/confirm_button"
            tools:ignore="ButtonStyle"
            android:layout_marginStart="90dp"
            android:layout_marginEnd="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:id="@+id/edit_btn"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>


</LinearLayout>
